background attachment issue fix (?) on mobile safari

--- a/css/main.css
+++ b/css/main.css
@@ -38,7 +38,7 @@ a.nav-link.active, a.nav-link:hover {
     top: 0;
     left: 0;
     width: 100%;
-    height: 100%;
+    height: 100vh;
     z-index: 9999;
     background-color: #000000;
     background-attachment: fixed;
